--- a/documentation/proposals/DOP-001.md
+++ b/documentation/proposals/DOP-001.md
@@ -11,7 +11,7 @@ _Relevant information_:
 
 ## Introduction
 
-This proposal describes my observations about the NGINX App Protect WAF documentation set, and my plan for how to address its problems. 
+This proposal describes my observations about NGINX App Protect WAF documentation set, and my plan for how to address its problems. 
 
 It will be shared with stakeholders to challenge or verify certain assumptions and to give the affected teams advance warning, as the changes involved are substantial.
 
@@ -37,7 +37,7 @@ Understanding the relationship between pages and use cases is crticially importa
 
 ### Content duplication
 
-At the highest level, there is a gigantic amount of duplication from [the landing page](https://docs.nginx.com/nginx-app-protect-waf) to account for the V4/V5 split.
+At the highest level, there is a gigantic amount of duplication from [landing page](https://docs.nginx.com/nginx-app-protect-waf) to account for the V4/V5 split.
 
 To emphasize this duplication, I have illustrated the high level sections, which are identical.
 
@@ -85,7 +85,7 @@ graph LR
 
 At initial glance, this does not seem overly complex outside of deployment and v5-specific features.
 
-As it stands, the majority of NAP documentation between the V4 and V5 branches are identical - they have the same pages and same sections. 
+As it stands, the majority of NAP documentation between V4 and V5 branches are identical - they have the same pages and same sections. 
 
 Where they deviate are how they are deployed, and and what features are available. In the latter case, it seems that all of the newer functionality features are in V5.
 
@@ -459,7 +459,7 @@ flowchart LR
  
 ```
 
-The documentation related to NGINX App Protect WAF currently stored within the NGINX Ingress Controller documentation set would be migrated to instead be managed and stored within the NGINX App Protect WAF documentation. The V4/V5 split that created the current state of the documentation's IA was also inherited by NGINX Ingress Controller. 
+Documentation related to NGINX App Protect WAF currently stored within NGINX Ingress Controller documentation set would be migrated to instead be managed and stored within NGINX App Protect WAF documentation. The V4/V5 split that created the current state of the documentation's IA was also inherited by NGINX Ingress Controller. 
 
 ### Move Troubleshooting information into contextual pages
 
